apps/photos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photos-ingress
  namespace: photos
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: photos.amer.dev
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  ingressClassName: infra-traefik
  tls:
    - hosts:
        - photos.amer.dev
      secretName: photos-amer-dev-tls
  rules:
    - host: photos.amer.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photos
                port:
                  number: 80
